cmake_minimum_required(VERSION 3.17)
project(winds-of-chime)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
find_package(glfw3 REQUIRED)

string(APPEND CMAKE_C_FLAGS " -Wall -Wextra -Werror -fverbose-asm -g")
string(APPEND CMAKE_C_FLAGS " -Wno-unused -Wno-unused-parameter -Wconversion")
string(APPEND CMAKE_C_FLAGS " -std=c11")
string(APPEND CMAKE_C_FLAGS " -fvisibility=hidden -fstrict-aliasing")
#string(APPEND CMAKE_C_FLAGS " -O3 -march=native -mtune=native -flto")
string(APPEND CMAKE_C_FLAGS " -O3 -march=native -mtune=native")
string(APPEND CMAKE_C_FLAGS " -D_GNU_SOURCE")
string(APPEND CMAKE_C_FLAGS " -pipe")
#string(APPEND CMAKE_C_FLAGS " -O0")
#string(APPEND CMAKE_C_FLAGS " -fsanitize=address")
#string(APPEND CMAKE_C_FLAGS " -fsanitize=undefined")
string(APPEND CMAKE_C_FLAGS " -DTRACY_ENABLE")

#string(APPEND CMAKE_CXX_FLAGS "-Wall -Wextra -Werror -fverbose-asm -g")
#string(APPEND CMAKE_CXX_FLAGS " -Wno-unused -Wno-unused-parameter -Wconversion")
string(APPEND CMAKE_CXX_FLAGS " -std=c++17")
string(APPEND CMAKE_CXX_FLAGS " -fvisibility=hidden -fstrict-aliasing")
string(APPEND CMAKE_CXX_FLAGS " -DTRACY_ENABLE")
#string(APPEND CMAKE_CXX_FLAGS " -O3 -march=native -mtune=native -flto")
string(APPEND CMAKE_CXX_FLAGS " -O3 -march=native -mtune=native")
string(APPEND CMAKE_CXX_FLAGS " -D_GNU_SOURCE")
string(APPEND CMAKE_CXX_FLAGS " -pipe")
#string(APPEND CMAKE_CXX_FLAGS " -O0")
#string(APPEND CMAKE_CXX_FLAGS " -fsanitize=address")
#string(APPEND CMAKE_CXX_FLAGS " -fsanitize=undefined")
string(APPEND CMAKE_CXX_FLAGS " -DTRACY_ENABLE")

add_subdirectory(third-party EXCLUDE_FROM_ALL)
add_subdirectory(src)
