[package]
name = "winds-of-chime"
version = "0.1.0"
authors = ["David Zmick <dpzmick@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
winit = "0.21.0"
vk-sys = "0.5.1"
vk_functions = {path = "./vk_functions"}

[profile.dev]
opt-level     = 0
lto           = false
codegen-units = 16
incremental   = true
