[package]
name = "winds-of-chime"
version = "0.1.0"
authors = ["David Zmick <dpzmick@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
winit        = "0.21.0"
bitflags     = "1.2.1"

[profile.dev]
opt-level     = 0
lto           = false
codegen-units = 128
incremental   = true

[profile.release]
opt-level        = 3
lto              = true
debug-assertions = false
overflow-checks  = false
panic            = "abort"